# Lantern-DE

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Lantern-DE+Ember+Lanty.code-workspace  Makefile  dev_notes.md  install.sh
fox_flare/: Cargo.toml  ROADMAP.md  fox-flare.desktop
fox_flare/src/: app.rs  main.rs  theme.rs
fox_flare/src/cloud/: auth.rs  config.rs  mod.rs  storage.rs  sync.rs
fox_flare/src/dnd/: mod.rs  overlay.rs  x11_source.rs
fox_flare/src/fs_ops/: clipboard.rs  directory.rs  icons.rs  mod.rs  mounts.rs  operations.rs
fox_flare/src/ui/: batch_rename.rs  content.rs  fox_den.rs  mod.rs  nav_bar.rs  properties.rs  sidebar.rs  status_bar.rs  tab_bar.rs  title_bar.rs
lntrn-bar/: Cargo.toml
lntrn-bar/src/: apptray.rs  audio.rs  bar_settings.rs  battery.rs  bluetooth.rs  bluetooth_send.rs  bluetooth_transfer.rs  bluetooth_ui.rs  bluetooth_worker.rs  clock.rs  dbus.rs  dbusmenu.rs  desktop.rs  hover.rs  lava.rs  layershell.rs  main.rs  mpris.rs  sni.rs  svg_icon.rs  temperature.rs  theme_state.rs  toplevel.rs  tray.rs  wifi.rs  workspaces.rs
lntrn-bar/src/appmenu/: actions.rs  clipboard_tab.rs  draw.rs  mod.rs  notes.rs  power_modal.rs  sidebar.rs  sysmon.rs  sysmon_draw.rs
lntrn-bar/src/audio/: draw.rs  mod.rs  poll.rs
lntrn-browser/: Cargo.toml  lntrn-browser.desktop
lntrn-browser/src/: main.rs  passwords.rs  style.rs  tabs.rs
lntrn-calculator/: Cargo.toml  lntrn-calculator.desktop
lntrn-calculator/src/: calc.rs  main.rs
lntrn-clipboard/: Cargo.toml
lntrn-clipboard/src/: copy.rs  paste.rs
lntrn-code/: Cargo.toml  lntrn-code.desktop  lntrn-notepad.desktop
lntrn-code/scripts/: ai-setup.sh
lntrn-code/src/: actions.rs  auto_pair.rs  bracket_match.rs  clipboard.rs  consts.rs  editor.rs  format.rs  keys.rs  main.rs  markdown.rs  minimap.rs  mouse.rs  render.rs  run.rs  scrollbar.rs  sidebar.rs  status_bar.rs  syntax.rs  tab_strip.rs  tabs.rs  term_panel.rs  theme.rs  wrap.rs
lntrn-code/src/lsp/: client.rs  framing.rs  glue.rs  manager.rs  mod.rs  protocol.rs  ui_render.rs
lntrn-code/src/term/: grid.rs  input.rs  mod.rs  pty.rs  render.rs
lntrn-compositor/: Cargo.toml
lntrn-compositor/src/: animation.rs  blur.rs  canvas.rs  cursor.rs  easing.rs  gestures.rs  hot_corners.rs  hover_preview.rs  input.rs  layer_position.rs  main.rs  minimize_anim.rs  rect_anim.rs  render.rs  rounded_element.rs  screencopy_render.rs  shaders.rs  snap.rs  ssd.rs  state.rs  switcher.rs  tiling.rs  tiling_anim.rs  udev.rs  udev_device.rs  wallpaper.rs  window_ext.rs  window_management.rs  window_state_anim.rs  winit.rs  workspace_anim.rs  workspace_ipc.rs  workspaces.rs  xwayland.rs
lntrn-compositor/src/grabs/: move_grab.rs  resize_grab.rs
lntrn-compositor/src/handlers/: compositor.rs  foreign_toplevel.rs  layer_shell.rs  mod.rs  output_management.rs  screencopy.rs  xdg_foreign.rs  xdg_shell.rs  xwayland.rs
lntrn-file-manager/: Cargo.toml  lntrn-file-manager.desktop
lntrn-file-manager/src/: app.rs  clipboard.rs  desktop.rs  file_info.rs  file_ops.rs  fs.rs  icons.rs  layout.rs  main.rs  pick_bar.rs  properties.rs  render.rs  sections.rs  settings.rs  undo.rs  views.rs  wayland.rs  wayland_actions.rs  wayland_dispatch.rs  wayland_loop.rs
lntrn-lava-lamp/: Cargo.toml
lntrn-lava-lamp/src/: dispatch.rs  main.rs  simulation.rs  theme.rs  wayland.rs
lntrn-media-player/: Cargo.toml  org.lantern.MediaPlayer.desktop
lntrn-media-player/src/: app.rs  main.rs  mpris_server.rs  pipeline.rs  position_store.rs  render.rs  wayland.rs
lntrn-menu/lntrn-menu-backup/: Cargo.toml
lntrn-music-player/: Cargo.toml
lntrn-music-player/src/: app.rs  config.rs  library.rs  main.rs  player.rs  queue.rs  theme.rs  track.rs
lntrn-music-player/src/ui/: controls.rs  (+4 more)
lntrn-notepad/: Cargo.toml  TODO.md  lntrn-notepad.desktop  roadmap.md
lntrn-notepad/src/: actions.rs  editor.rs  find_bar.rs  format.rs  keys.rs  main.rs  mouse.rs  render.rs  scrollbar.rs  status_bar.rs  tab_strip.rs  tabs.rs  theme.rs  title_bar.rs  toolbar.rs
lntrn-notifyd/: Cargo.toml
lntrn-notifyd/src/: layershell.rs  main.rs  notifications.rs  send.rs
lntrn-osd/: Cargo.toml
lntrn-osd/src/: layershell.rs  main.rs  svg_icon.rs
lntrn-portal/: Cargo.toml
lntrn-portal/config/: lantern-portals.conf  lantern.portal  org.freedesktop.impl.portal.desktop.lantern.service
lntrn-portal/src/: filechooser.rs  main.rs  request.rs
lntrn-render/: Cargo.toml  TEXT_OCCLUSION_FIX.md
lntrn-render/draw/: Cargo.toml
lntrn-render/gfx/: Cargo.toml
lntrn-render/lab/: Cargo.toml
lntrn-render/src/: gpu.rs  grid.rs  lib.rs  painter.rs  shader.rs  text.rs
lntrn-render/tex/: Cargo.toml
lntrn-render/text/: Cargo.toml
lntrn-screenshot/: Cargo.toml
lntrn-screenshot/src/: capture.rs  clipboard.rs  main.rs
lntrn-snapshot/: Cargo.toml  lntrn-snapshot-gui.desktop  lntrn-snapshot-gui.sh  org.lantern.snapshot.policy
lntrn-snapshot/src/: config.rs  ioctl.rs  lib.rs  main.rs  manager.rs
lntrn-sysmon/: Cargo.toml  lntrn-sysmon.desktop
lntrn-sysmon/src/: dispatch.rs  main.rs  performance.rs  processes.rs  sysinfo.rs  tabs.rs  wayland.rs
lntrn-system-settings/: Cargo.toml  lntrn-system-settings.desktop
lntrn-system-settings/src/: app.rs  chrome.rs  config.rs  display_panel.rs  icon_panel.rs  icons.rs  input_panel.rs  main.rs  monitor_arrange.rs  monitor_settings.rs  output_manager.rs  panels.rs  power_panel.rs  text_edit.rs  theme.rs  wallpaper_picker.rs  wayland.rs  wayland_state.rs
lntrn-terminal/: Cargo.toml  lntrn-terminal.desktop
lntrn-terminal/src/: app.rs  claude_menu.rs  clipboard.rs  config.rs  events.rs  git_app.rs  git_sidebar.rs  help_menu.rs  input.rs  main.rs  night_sky.rs  pty.rs  render.rs  render_app.rs  sidebar.rs  tab_bar.rs  tabs.rs  theme.rs  ui_chrome.rs
lntrn-ui/: Cargo.toml
lntrn-ui/src/: animation.rs  components.rs  lib.rs  palette.rs  theme.rs  typography.rs
lntrn-ui/test/: Cargo.toml
lntrn-video-editor/: Cargo.toml
lntrn-video-editor/src/: chrome.rs  decoder.rs  dispatch.rs  layout.rs  main.rs  playback.rs  popup_backend.rs  preview.rs  render.rs  wayland.rs
(+223 files in other folders)
