[workspace]
resolver = "2"
members = [
    "lntrn-render/draw",
    "lntrn-render/gfx",
    "lntrn-render/lab",
    "lntrn-render/text",
    "lntrn-compositor",
    "lntrn-ui",
    "lntrn-render",
    "lntrn-fox-file-manager",
    "lntrn-bar",
    "lntrn-terminal",
    "lntrn-image-viewer",
    "lntrn-video-player",
    "lntrn-music-player",
    "lntrn-screenshot",
    "lntrn-session-manager",
    "lntrn-system-settings",
    "lntrn-theme",
]

[profile.release]
opt-level = 2
strip = true
incremental = false

[profile.release.package.lantern-music-player]
opt-level = 3
