[workspace]
resolver = "2"
members = [
    "lntrn-render/draw",
    "lntrn-render/gfx",
    "lntrn-ui/test",
    "lntrn-render/text",
    "lntrn-compositor",
    "lntrn-ui",
    "lntrn-render",
    "lntrn-file-manager",
    "lntrn-bar",
    "lntrn-terminal",
    "lntrn-image-viewer",
    "lntrn-video-player",
    "lntrn-music-player",
    "lntrn-screenshot",
    "lntrn-session-manager",
    "lntrn-system-settings",
    "lntrn-theme",
    "lntrn-clipboard",
    "lntrn-osd",
    "lntrn-notifyd",
    "lntrn-menu",
    "lntrn-notepad",
    "lntrn-browser",
    "lntrn-snapshot",
    "lntrn-portal",
    "lntrn-git",
]

[profile.release]
opt-level = 2
strip = true
incremental = false

[profile.release.package.lantern-music-player]
opt-level = 3
