[workspace]
resolver = "2"
members = [
    "lntrn-render/draw",
    "lntrn-render/gfx",
    "lntrn-ui/test",
    "lntrn-render/text",
    "lntrn-compositor",
    "lntrn-ui",
    "lntrn-render",
    "lntrn-file-manager",
    "lntrn-desktop",
    "lntrn-bar",
    "lntrn-terminal",
    "lntrn-image-viewer",
    "lntrn-media-player",
    "lntrn-screenshot",
    "lntrn-session-manager",
    "lntrn-system-settings",
    "lntrn-theme",
    "lntrn-clipboard",
    "lntrn-osd",
    "lntrn-notifyd",
    "lntrn-menu",
    "lntrn-notepad",
    "lntrn-code",
    "lntrn-browser",
    "lntrn-snapshot",
    "lntrn-portal",
    "lntrn-git",
    "lntrn-calculator",
    "lntrn-dbus",
    "lntrn-app-template",
    "lntrn-sysmon",
    "lntrn-icons",
    "lntrn-screencopy",
    "lntrn-video-editor",
]

[profile.release]
opt-level = 2
strip = true
incremental = false
