[package]
name = "fox-flare"
version = "0.1.0"
description = "A native file manager built with egui"
authors = ["Jca56"]
edition = "2021"

[dependencies]
eframe = "0.33"
egui_extras = { version = "0.33", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp", "ico", "tiff"] }
libc = "0.2"
resvg = "0.47"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
md-5 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
urlencoding = "2"

[profile.release]
opt-level = 2
strip = true
