[package]
name = "lntrn-browser"
version = "0.1.0"
description = "Lantern DE — Minimal Web Browser"
authors = ["Jca56"]
edition = "2021"

[[bin]]
name = "lntrn-browser"
path = "src/main.rs"

[dependencies]
gtk = { package = "gtk", version = "0.18", features = ["v3_24"] }
gdk = "0.18"
pango = "0.18"
glib = "0.18"
webkit2gtk = { version = "2.0", features = ["v2_38"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gio = "0.18"
url = "2"
