[package]
name = "lntrn-calculator"
version = "0.1.0"
description = "Lantern DE - Calculator"
authors = ["Jca56"]
edition = "2021"

[[bin]]
name = "lntrn-calculator"
path = "src/main.rs"

[dependencies]
lntrn-render = { path = "../lntrn-render" }
lntrn-theme = { path = "../lntrn-theme" }
winit = { version = "0.30", features = ["wayland"] }
