[package]
name = "lntrn-compositor"
version = "0.1.0"
description = "Wayland compositor for Lantern DE"
authors = ["Jca56"]
edition = "2021"

[[bin]]
name = "lntrn-compositor"
path = "src/main.rs"

[dependencies]
smithay = { version = "0.7", default-features = false, features = [
    "backend_winit",
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "renderer_gl",
    "wayland_frontend",
    "desktop",
    "xwayland",
] }
smithay-drm-extras = { version = "0.1", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bitflags = "2"
xcursor = "0.3"
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
wayland-protocols = { version = "0.32", features = ["server", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["server"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
resvg = "0.47"
