[package]
name = "lntrn-media-player"
version = "0.1.0"
edition = "2021"
description = "Lantern DE - Media Player"

[[bin]]
name = "lntrn-media-player"
path = "src/main.rs"

[dependencies]
anyhow = "1"
lntrn-render = { path = "../lntrn-render" }
lntrn-ui = { path = "../lntrn-ui" }
raw-window-handle = "0.6"
wayland-backend = { version = "0.3", features = ["client_system"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-audio = "0.23"
gstreamer-video = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
libc = "0.2"
lntrn-dbus = { path = "../lntrn-dbus" }
