[package]
name = "lntrn-notifyd"
version = "0.1.0"
description = "Notification daemon for Lantern DE"
authors = ["Jca56"]
edition = "2021"

[[bin]]
name = "lntrn-notifyd"
path = "src/main.rs"

[[bin]]
name = "notify-send"
path = "src/send.rs"

[dependencies]
anyhow = "1"
libc = "0.2"
nix = { version = "0.29", features = ["fs"] }
lntrn-render = { path = "../lntrn-render" }
lntrn-ui = { path = "../lntrn-ui" }
raw-window-handle = "0.6"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
wayland-backend = { version = "0.3", features = ["client_system"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wgpu = "28"
zbus = { version = "5", default-features = false, features = ["tokio", "blocking-api"] }
