[package]
name = "lntrn-portal"
version = "0.1.0"
description = "xdg-desktop-portal backend for Lantern DE"
authors = ["Jca56"]
edition = "2021"

[[bin]]
name = "lntrn-portal"
path = "src/main.rs"

[dependencies]
anyhow = "1"
libc = "0.2"
tokio = { version = "1", features = ["rt", "sync", "macros", "process"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
