[package]
name = "lntrn-render"
version = "0.1.0"
description = "2D rendering engine for Lantern DE"
authors = ["Jca56"]
edition = "2021"

[dependencies]
wgpu = "28"
bytemuck = { version = "1", features = ["derive"] }
glyphon = "0.10"
raw-window-handle = "0.6"
pollster = "0.4"
x11 = { version = "2.21", features = ["xlib"] }
