[package]
name = "lntrn-screenshot"
version = "0.1.0"
description = "Screenshot tool for Lantern DE"
authors = ["Jca56"]
edition = "2021"

[dependencies]
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2"
lntrn-render = { path = "../lntrn-render" }
lntrn-ui = { path = "../lntrn-ui", default-features = false, features = ["gpu"] }
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wgpu = "28"
winit = { version = "0.30", default-features = false, features = ["rwh_06", "wayland", "x11"] }
