[package]
name = "lntrn-sysmon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lntrn-sysmon"
path = "src/main.rs"

[dependencies]
anyhow = "1"
lntrn-render = { path = "../lntrn-render" }
lntrn-ui = { path = "../lntrn-ui" }
lntrn-theme = { path = "../lntrn-theme" }
raw-window-handle = "0.6"
wayland-backend = { version = "0.3", features = ["client_system"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }
wgpu = "28"
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2"
