[package]
name = "lntrn-system-settings"
version = "0.1.0"
description = "Lantern DE - System Settings"
authors = ["Jca56"]
edition = "2021"

[[bin]]
name = "lntrn-system-settings"
path = "src/main.rs"

[dependencies]
anyhow = "1"
lntrn-render = { path = "../lntrn-render" }
lntrn-ui = { path = "../lntrn-ui" }
lntrn-theme = { path = "../lntrn-theme" }
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
wayland-backend = { version = "0.3", features = ["client_system"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
xkbcommon = "0.9"
wgpu = "28"
resvg = "0.47"
