[package]
name = "lntrn-terminal"
version = "0.1.0"
description = "A native terminal emulator for Lantern DE"
authors = ["Jca56"]
edition = "2021"

[dependencies]
libc = "0.2"
lntrn-icons = { path = "../lntrn-icons" }
lntrn-render = { path = "../lntrn-render" }
nix = { version = "0.29", features = ["term", "signal", "fs", "process", "poll"] }
wayland-client = { version = "0.31", features = ["log"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
vte = "0.13"
image = { version = "0.25", default-features = false, features = ["png"] }
winit = { version = "0.30", default-features = false, features = ["rwh_06", "wayland", "x11"] }
lntrn-ui = { path = "../lntrn-ui" }
lntrn-theme = { path = "../lntrn-theme" }
