[package]
name = "lntrn-menu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
libc = "0.2"
lntrn-render = { path = "../lntrn-render" }
lntrn-ui = { path = "../lntrn-ui" }
raw-window-handle = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wayland-backend = { version = "0.3", features = ["client_system"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wgpu = "28"
